force-app/main/default/objects/Invite__c/Invite__c.object-meta.xml
<CustomObject>
    <description>Tracks the invitation process for a given fund from profile to proposal</description>
    <label>Invite</label>
    <nameField>
        <displayFormat>INV-{0000000}</displayFormat>
        <label>Invite Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>