force-app/main/default/objects/Invite__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>The account of the group (potentially) being invited to proposal</description>
    <inlineHelpText>The account of the group (potentially) being invited to proposal</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invites</relationshipLabel>
    <relationshipName>Invites</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>