force-app/main/default/objects/Invite__c/fields/Account_is_grantee__c.field-meta.xml
<CustomField>
    <fullName>Account_is_grantee__c</fullName>
    <description>Checked if the linked account is a grantee</description>
    <formula>Account__r.Grantee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if the linked account is a grantee</inlineHelpText>
    <label>Account is grantee</label>
    <type>Checkbox</type>
</CustomField>