force-app/main/default/objects/Invite__c/fields/Account_name__c.field-meta.xml
<CustomField>
    <fullName>Account_name__c</fullName>
    <description>Name of the linked account</description>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name of the linked account</inlineHelpText>
    <label>Account name</label>
    <type>Text</type>
</CustomField>