force-app/main/default/objects/Invite__c/fields/Allocation__c.field-meta.xml
<CustomField>
    <fullName>Allocation__c</fullName>
    <description>The parent allocation of this invite</description>
    <inlineHelpText>The parent allocation of this invite</inlineHelpText>
    <label>Allocation</label>
    <referenceTo>Allocation__c</referenceTo>
    <relationshipLabel>Invites</relationshipLabel>
    <relationshipName>Invites</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>