force-app/main/default/objects/Invite__c/fields/Allocation_description__c.field-meta.xml
<CustomField>
    <fullName>Allocation_description__c</fullName>
    <description>The description from this invite&apos;s allocation</description>
    <formula>Allocation__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The description from this invite&apos;s allocation</inlineHelpText>
    <label>Allocation description</label>
    <type>Text</type>
</CustomField>