force-app/main/default/objects/Invite__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>The amount expected to be awarded</description>
    <inlineHelpText>The amount expected to be awarded</inlineHelpText>
    <label>Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>