force-app/main/default/objects/Invite__c/fields/Amount_awarded__c.field-meta.xml
<CustomField>
    <fullName>Amount_awarded__c</fullName>
    <description>The amount awarded from the linked proposal</description>
    <inlineHelpText>The amount awarded from the linked proposal</inlineHelpText>
    <label>Amount awarded</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>