force-app/main/default/objects/Invite__c/fields/Amount_awarded_formula__c.field-meta.xml
<CustomField>
    <fullName>Amount_awarded_formula__c</fullName>
    <description>The amount awarded of the linked proposal (formula version)</description>
    <formula>Proposal__r.Amount_awarded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount awarded of the linked proposal (formula version)</inlineHelpText>
    <label>Amount awarded [formula]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>