force-app/main/default/objects/Invite__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comments and notes related to this invite</description>
    <inlineHelpText>Comments and notes related to this invite</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>