force-app/main/default/objects/Invite__c/fields/Correspondence_language__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_language__c</fullName>
    <description>The correspondence language from this invite&apos;s account record</description>
    <formula>TEXT(Account__r.Correspondence_language__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The correspondence language from this invite&apos;s account record</inlineHelpText>
    <label>Correspondence language</label>
    <type>Text</type>
</CustomField>