force-app/main/default/objects/Invite__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>The country from the linked proposal/account</description>
    <formula>IF(NOT(ISBLANK(Proposal__c)),  Proposal__r.Country__r.Name ,
IF(NOT(ISBLANK(Account__c)),  Account__r.GM_country__r.Name ,
null
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The country from the linked proposal/account</inlineHelpText>
    <label>Country</label>
    <type>Text</type>
</CustomField>