force-app/main/default/objects/Invite__c/fields/Custom_Reqs__c.field-meta.xml
<CustomField>
    <fullName>Custom_Reqs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Custom Reqs that apply to an invited proposal.  If blank, then the custom reqs on this invite&apos;s allocation (if any) are used.</description>
    <inlineHelpText>The Custom Reqs that apply to an invited proposal.  If blank, then the custom reqs on this invite&apos;s allocation (if any) are used.</inlineHelpText>
    <label>Custom Reqs</label>
    <referenceTo>Custom_Reqs__c</referenceTo>
    <relationshipLabel>Invites</relationshipLabel>
    <relationshipName>Invites</relationshipName>
    <type>Lookup</type>
</CustomField>