force-app/main/default/objects/Invite__c/fields/Custom_reqs_from_allocation__c.field-meta.xml
<CustomField>
    <fullName>Custom_reqs_from_allocation__c</fullName>
    <description>The name of the Custom Reqs, if any, that appears in this invite&apos;s allocation record</description>
    <formula>Allocation__r.Custom_Reqs__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name of the Custom Reqs, if any, that appears in this invite&apos;s allocation record</inlineHelpText>
    <label>Custom reqs from allocation</label>
    <type>Text</type>
</CustomField>