force-app/main/default/objects/Invite__c/fields/Date_approved__c.field-meta.xml
<CustomField>
    <fullName>Date_approved__c</fullName>
    <description>The date on which this invite was approved, meaning that it&apos;s ready for a proposal</description>
    <inlineHelpText>The date on which this invite was approved, meaning that it&apos;s ready for a proposal</inlineHelpText>
    <label>Date approved</label>
    <type>Date</type>
</CustomField>