force-app/main/default/objects/Invite__c/fields/Date_eliminated__c.field-meta.xml
<CustomField>
    <fullName>Date_eliminated__c</fullName>
    <description>The date on which this invite was eliminated from consideration under this fund</description>
    <inlineHelpText>The date on which this invite was eliminated from consideration under this fund</inlineHelpText>
    <label>Date eliminated</label>
    <type>Date</type>
</CustomField>