force-app/main/default/objects/Invite__c/fields/Date_invited__c.field-meta.xml
<CustomField>
    <fullName>Date_invited__c</fullName>
    <description>The date on which the group was invited to apply with a full proposal (ie Invite letter sent).  If the proposal was not &quot;invited&quot;, then Date Received from the linked proposal is used.</description>
    <inlineHelpText>The date on which the group was invited to apply with a full proposal (ie Invite letter sent).  If the proposal was not &quot;invited&quot;, then Date Received from the linked proposal is used.</inlineHelpText>
    <label>Date invited</label>
    <type>Date</type>
</CustomField>