force-app/main/default/objects/Invite__c/fields/Date_invited_formula__c.field-meta.xml
<CustomField>
    <fullName>Date_invited_formula__c</fullName>
    <description>The date invited or if blank, date received, of the linked proposal (formula version)</description>
    <formula>IF(NOT(ISBLANK(Proposal__r.Date_invited__c)), Proposal__r.Date_invited__c, Proposal__r.Date_received__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date invited or if blank, date received, of the linked proposal (formula version)</inlineHelpText>
    <label>Date invited [formula]</label>
    <type>Date</type>
</CustomField>