force-app/main/default/objects/Invite__c/fields/Date_recommended__c.field-meta.xml
<CustomField>
    <fullName>Date_recommended__c</fullName>
    <description>The date on which this invite was recommended by the Movements Team to go ahead and invite to proposal</description>
    <inlineHelpText>The date on which this invite was recommended by the Movements Team to go ahead and invite to proposal</inlineHelpText>
    <label>Date recommended</label>
    <type>Date</type>
</CustomField>