force-app/main/default/objects/Invite__c/fields/For_invitation__c.field-meta.xml
<CustomField>
    <fullName>For_invitation__c</fullName>
    <description>The For Invitation override if any, else the value of For Invitation from the linked allocation</description>
    <formula>IF(ISBLANK(TEXT(For_invitation_override__c)), For_invitation_from_allocation__c, TEXT(For_invitation_override__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The For Invitation override if any, else the value of For Invitation from the linked allocation</inlineHelpText>
    <label>For invitation</label>
    <type>Text</type>
</CustomField>