force-app/main/default/objects/Invite__c/fields/For_invitation_from_allocation__c.field-meta.xml
<CustomField>
    <fullName>For_invitation_from_allocation__c</fullName>
    <description>Value of the &quot;For invitation&quot; field inherited from the linked allocation</description>
    <formula>TEXT(Allocation__r.For_invitation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Value of the &quot;For invitation&quot; field inherited from the linked allocation</inlineHelpText>
    <label>For invitation (from allocation)</label>
    <type>Text</type>
</CustomField>