force-app/main/default/objects/Invite__c/fields/For_invitation_override__c.field-meta.xml
<CustomField>
    <fullName>For_invitation_override__c</fullName>
    <description>Override of the &quot;For invitation&quot; field inherited from the linked allocation</description>
    <inlineHelpText>Override of the &quot;For invitation&quot; field inherited from the linked allocation</inlineHelpText>
    <label>For invitation (override)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>For_invitation</valueSetName>
    </valueSet>
</CustomField>