force-app/main/default/objects/Invite__c/fields/Fund_name__c.field-meta.xml
<CustomField>
    <fullName>Fund_name__c</fullName>
    <description>The name of the fund that is the parent of his invite&apos;s allocation</description>
    <formula>Allocation__r.Fund__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name of the fund that is the parent of his invite&apos;s allocation</inlineHelpText>
    <label>Fund name</label>
    <type>Text</type>
</CustomField>