force-app/main/default/objects/Invite__c/fields/Grant__c.field-meta.xml
<CustomField>
    <fullName>Grant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the linked proposal is a grant [not a cross-object formula so it can be rolled-up in parent record]</description>
    <inlineHelpText>Checked if the linked proposal is a grant [not a cross-object formula so it can be rolled-up in parent record]</inlineHelpText>
    <label>Grant</label>
    <type>Checkbox</type>
</CustomField>