force-app/main/default/objects/Invite__c/fields/Grant_formula__c.field-meta.xml
<CustomField>
    <fullName>Grant_formula__c</fullName>
    <description>Checked if linked proposal is a grant (formula version)</description>
    <formula>Proposal__r.Grant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if linked proposal is a grant (formula version)</inlineHelpText>
    <label>Grant [formula]</label>
    <type>Checkbox</type>
</CustomField>