force-app/main/default/objects/Invite__c/fields/Has_prior_profile__c.field-meta.xml
<CustomField>
    <fullName>Has_prior_profile__c</fullName>
    <description>Checked if the profile linked to this invite has a prior profile</description>
    <formula>AND(
 NOT(ISBLANK(Profile__c)),
 NOT(ISBLANK(Profile__r.Prior_profile__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if the profile linked to this invite has a prior profile</inlineHelpText>
    <label>Has prior profile</label>
    <type>Checkbox</type>
</CustomField>