force-app/main/default/objects/Invite__c/fields/Has_proposal__c.field-meta.xml
<CustomField>
    <fullName>Has_proposal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this invite is linked to a proposal</description>
    <inlineHelpText>Checked if this invite is linked to a proposal</inlineHelpText>
    <label>Has proposal</label>
    <type>Checkbox</type>
</CustomField>