force-app/main/default/objects/Invite__c/fields/Invite_proposal_clash__c.field-meta.xml
<CustomField>
    <fullName>Invite_proposal_clash__c</fullName>
    <description>This invite&apos;s proposal does not link back to this invite</description>
    <formula>AND(
 NOT(ISBLANK(Proposal__c)),
 Proposal__r.Invite__c != Id
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This invite&apos;s proposal does not link back to this invite</inlineHelpText>
    <label>Invite-proposal clash</label>
    <type>Checkbox</type>
</CustomField>