force-app/main/default/objects/Invite__c/fields/Invited_or_has_proposal__c.field-meta.xml
<CustomField>
    <fullName>Invited_or_has_proposal__c</fullName>
    <description>Checked if either Date invited is non-blank or there is a link to a proposal</description>
    <formula>Has_proposal__c || NOT(ISBLANK( Date_invited__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if either Date invited is non-blank or there is a link to a proposal</inlineHelpText>
    <label>Invited or has proposal</label>
    <type>Checkbox</type>
</CustomField>