force-app/main/default/objects/Invite__c/fields/Linked_profile_submitted__c.field-meta.xml
<CustomField>
    <fullName>Linked_profile_submitted__c</fullName>
    <description>Checked if this invite is linked to a submitted profile</description>
    <formula>AND(
 NOT(ISBLANK(Profile__c)),
 NOT(ISBLANK(Profile__r.Date_submitted__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if this invite is linked to a submitted profile</inlineHelpText>
    <label>Linked profile submitted</label>
    <type>Checkbox</type>
</CustomField>