force-app/main/default/objects/Invite__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The profile on which this invite is based</description>
    <inlineHelpText>The profile on which this invite is based</inlineHelpText>
    <label>Profile</label>
    <referenceTo>Profile__c</referenceTo>
    <relationshipLabel>Invites</relationshipLabel>
    <relationshipName>Invites</relationshipName>
    <type>Lookup</type>
</CustomField>