force-app/main/default/objects/Invite__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The proposal resulting from this invite</description>
    <inlineHelpText>The proposal resulting from this invite</inlineHelpText>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Invites</relationshipLabel>
    <relationshipName>Invites</relationshipName>
    <type>Lookup</type>
</CustomField>