force-app/main/default/objects/Invite__c/fields/Proposal_status__c.field-meta.xml
<CustomField>
    <fullName>Proposal_status__c</fullName>
    <description>The status of the linked proposal</description>
    <formula>Proposal__r.Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The status of the linked proposal</inlineHelpText>
    <label>Proposal status</label>
    <type>Text</type>
</CustomField>