force-app/main/default/objects/Invite__c/fields/Proposal_to_clone__c.field-meta.xml
<CustomField>
    <fullName>Proposal_to_clone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If non-blank, then the &quot;New Proposal&quot; button will clone this proposal rather than build a new one.</description>
    <inlineHelpText>If non-blank, then the &quot;New Proposal&quot; button will clone this proposal rather than build a new one.</inlineHelpText>
    <label>Proposal to clone</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Invites (Proposal to clone)</relationshipLabel>
    <relationshipName>Invites1</relationshipName>
    <type>Lookup</type>
</CustomField>