force-app/main/default/objects/Invite__c/fields/Status_numeric__c.field-meta.xml
<CustomField>
    <fullName>Status_numeric__c</fullName>
    <description>A numeric version of this invite&apos;s status, suitable for sorting</description>
    <formula>VALUE( LEFT( Status__c, FIND(&quot; &quot;, Status__c) - 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A numeric version of this invite&apos;s status, suitable for sorting</inlineHelpText>
    <label>Status numeric</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>