force-app/main/default/objects/Invite__c/fields/Thematic_priority__c.field-meta.xml
<CustomField>
    <fullName>Thematic_priority__c</fullName>
    <description>The thematic priority of this invite&apos;s parent allocation</description>
    <formula>TEXT(Allocation__r.Thematic_priority__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The thematic priority of this invite&apos;s parent allocation</inlineHelpText>
    <label>Thematic priority</label>
    <type>Text</type>
</CustomField>