force-app/main/default/objects/Invite__c/validationRules/No_new_invites_for_closed_allocation.validationRule-meta.xml
<ValidationRule>
    <fullName>No_new_invites_for_closed_allocation</fullName>
    <active>true</active>
    <description>You may not create a new invite nor relink an existing invite to a closed allocation.</description>
    <errorConditionFormula>AND(
 OR(
  ISNEW(),
  ISCHANGED(Allocation__c)
 ),
 NOT(ISBLANK( Allocation__r.Date_closed__c )),
 Allocation__r.Date_closed__c &lt;= TODAY()
)</errorConditionFormula>
    <errorMessage>You may not create a new invite nor relink an existing invite to a closed allocation.</errorMessage>
</ValidationRule>