force-app/main/default/objects/Invite__c/validationRules/Non_zero_amount_for_date_approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_zero_amount_for_date_approved</fullName>
    <active>true</active>
    <description>The amount must be non-zero before the invite can be approved.</description>
    <errorConditionFormula>AND(
 NOT(ISBLANK( Date_approved__c )),
 ISCHANGED( Date_approved__c ),
 OR(
  ISBLANK( Amount__c ),
  Amount__c &lt;= 0
 )
)</errorConditionFormula>
    <errorMessage>The amount must be non-zero before the invite can be approved.</errorMessage>
</ValidationRule>