force-app/main/default/objects/Invite__c/validationRules/Valid_account_record_type.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_account_record_type</fullName>
    <active>true</active>
    <description>The account associated with an invite must have record type Organization GM</description>
    <errorConditionFormula>AND(
 NOT(ISBLANK(Account__c)),
 Account__r.RecordType.DeveloperName != &quot;Organization_GM&quot;
)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>The account associated with an invite must have record type Organization GM</errorMessage>
</ValidationRule>