force-app/main/default/objects/Invite__c/validationRules/Valid_proposal.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_proposal</fullName>
    <active>true</active>
    <description>Proposal must be linked to this invite&apos;s account</description>
    <errorConditionFormula>AND(
 NOT(ISBLANK( Proposal__c )),
 Proposal__r.Account__c !=  Account__c 
)</errorConditionFormula>
    <errorDisplayField>Proposal__c</errorDisplayField>
    <errorMessage>Proposal is not linked to this invite&apos;s account</errorMessage>
</ValidationRule>