force-app/main/default/objects/Invite__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Profile__c</columns>
    <columns>Allocation__c</columns>
    <columns>Fund_name__c</columns>
    <columns>Date_invited__c</columns>
    <columns>Status__c</columns>
    <columns>Amount__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>