force-app/main/default/objects/Invite__c/listViews/Invites_w_props_to_clone.listView-meta.xml
<ListView>
    <fullName>Invites_w_props_to_clone</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Allocation__c</columns>
    <columns>Country__c</columns>
    <columns>Custom_Reqs__c</columns>
    <columns>Proposal__c</columns>
    <columns>Proposal_to_clone__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proposal_to_clone__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Invites w/ props to clone</label>
</ListView>